Added a restrictive.policy, and modify command to apply